# glossa

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  DX_REPORT.md  ECHO_AUDIT.md  ECHO_ISSUE.md  ECHO_ISSUE_REPORT.md  ECHO_PR.md  HAVOC_ISSUE.md  HAVOC_ISSUE_REPL.md  HAVOC_PR.md  ISSUE.md  PR.md  PR_BODY.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST.md  astrolabe_cov.patch  astrolabe_cov2.patch  bad.gl  bad2.gl  binding_error.gl  check_norm.rs  check_proptest_panic.rs  cli_dump.txt  clippy_test.py  cobertura.xml  code.gl  codecov.yml  commit_message  commit_message.txt  commit_msg.py  commit_msg.txt  cov.out  cov.txt  coverage.lcov  coverage.txt  create_clean_split.py  debug3.diff  (+509 more)
.jules/: atlas.md  bard.md  bolt.md  echo.md  echo_report.md  forge.md  havoc.md  mosaic.md  nova.md  razor.md  sentry.md  warden.md
coverage/: lcov.info
docs/: architecture.md  audit_report_echo.md  dx_audit_echo.md  dx_audit_nova_commands.md  echo_dx_audit_issue.md  echo_dx_audit_issue_2.md  echo_dx_audit_issue_3.md  echo_dx_audit_issue_missing_errors.md  havoc_negative_index_panic.md
examples/: LEETCODE.md  collections_demo.glossa  collections_demo.γλ  error.γλ  hello.doc.md  hello.md  hello.rs  hello.γλ  invalid.γλ  leetcode_working.γλ  quickstart.doc.md  quickstart.md  quickstart.γλ  tests.γλ  variables.doc.md  variables.md  variables.rs  variables.γλ  working_tests.γλ
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_analyze.rs  fuzz_limit_bypass.rs  fuzz_repl.rs  fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs  fuzz_target_4.rs  fuzz_target_5.rs  fuzz_target_6.rs  fuzz_target_7.rs  fuzz_target_8.rs  fuzz_target_codegen.rs  havoc_numeral.rs
src/: ast.rs  ast.rs.orig  ast.rs.rej  cli.rs  cli_ui.rs  codegen.rs  errors.rs  glossa.pest  grammar.pest  grammar.rs  highlight.rs  lib.rs  limits.rs  main.rs  main.rs.orig  main.rs.patch  main.rs.rej  oracle.rs  parser.rs  repl.rs  report.rs  text.rs
tests/: alchemist_coverage.rs  assembler_dos.rs  assembly_error_coverage.rs  ast_coverage_tests.rs  astrolabe_coverage.rs  atlas_coverage.rs  atlas_refactor_coverage.rs  bard_coverage.rs  chronicle_coverage.rs  cli_coverage.rs  cli_extension_tests.rs  cli_tests.rs  codegen_coverage.rs  codegen_optimizations.rs  collection_tests.rs  compile_tests.rs  control_flow_tests.rs  control_flow_tests_more.rs  conversion_coverage.rs  conversion_coverage_gap.rs  coverage_fixes.rs  coverage_gap_fill.rs  coverage_perfect_fold.rs  coverage_perfect_participle.rs  coverage_struct.rs  (+215 more)
(+344 files in other folders)
