[package]
name = "glossa"
version = "0.1.0"
edition = "2024"
description = "ΓΛΩΣΣΑ - A compiler where Ancient Greek morphology encodes programming semantics"

[features]
nova = []

[dependencies]
crossterm = "0.29"
dirs-next = "2"
pest = "2.7"
pest_derive = "2.7"
unicode-normalization = "0.1"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
smol_str = "0.3"
rustc-hash = "2"
comfy-table = "7.2.2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.24.0"
stacker = "0.1"

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
proptest = "1.6.0"
