[package]
name = "glossa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.glossa]
path = ".."

[[bin]]
name = "fuzz_limit_bypass"
path = "fuzz_targets/fuzz_limit_bypass.rs"
test = false
doc = false
bench = false
