[package]
name = "glossa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.glossa]
path = ".."

[[bin]]
name = "fuzz_analyze"
path = "fuzz_targets/fuzz_analyze.rs"
test = false
doc = false
bench = false
